--- a/takapuna-webview/src/assets/index.css
+++ b/takapuna-webview/src/assets/index.css
@@ -21,5 +21,14 @@
     --tk-button-secondaryForeground: var(--vscode-button-secondaryForeground);
     --tk-button-secondaryBackground: var(--vscode-button-secondaryBackground);
     --tk-button-secondaryHoverBackground: var(--vscode-button-secondaryHoverBackground);
+    --tk-input-foreground: var(--vscode-input-foreground);
+    --tk-input-border: var(--vscode-input-border);
+    --tk-input-background: var(--vscode-input-background);
+    --tk-input-placeholderForeground: var(--vscode-input-placeholderForeground);
+  }
+
+  input:not([type='checkbox'])
+  textarea {
+    font-family: var(--vscode-font-family);
   }
 }
